MOW-1600 Make sure tooltips do not go off-screen

--- a/web/src/main/resources/scss/web-styles.scss
+++ b/web/src/main/resources/scss/web-styles.scss
@@ -848,6 +848,7 @@
 		-ms-user-select: none;
 		user-select: none;
 		will-change: transform;
+		overflow: visible;
 	}
 
 	.VerticalSeparator {
